Hide (Previous, Reset) Buttons In Competitive Mode | Deploy App To Github Pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "powerletter",
+  "name": "powerletter-for-pussles",
+  "homepage": "https://ahmadabdelbary2001.github.io/PowerLetter-for-Puzzles/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,13 +8,16 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gh-pages": "^6.3.0",
     "lucide-react": "^0.536.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
