--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "powerletter-for-pussles",
+  "name": "powerletter",
   "homepage": "https://ahmadabdelbary2001.github.io/PowerLetter-for-Puzzles/",
   "private": true,
   "version": "0.0.0",
