--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.8.0",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
