--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.8.0",
     "sonner": "^2.0.7",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.7"
   },
@@ -39,6 +40,7 @@
     "@types/node": "^24.1.0",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
+    "@types/styled-components": "^5.1.34",
     "@types/tailwindcss": "^3.0.11",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
