--- a/src/data/ar/formation/ar-formation-easy.json
+++ b/src/data/ar/formation/ar-formation-easy.json
@@ -2,57 +2,59 @@
     "levels": [
         {
             "id": "ar-easy-1",
-            "baseLetters": "ابتعن",
+            "baseLetters": "بقل",
             "words": [
-                "بنا",
-                "ابن",
-                "تباع",
-                "عنا",
-                "بنت",
-                "تعبان",
-                "عتاب",
-                "تبعا",
-                "اتبع",
-                "بات",
-                "تابع",
-                "نبا",
-                "نبات"
+                "قلب",
+                "قبل",
+                "لقب"
             ],
-            "solution": "ابتعن",
+            "solution": "بقل",
             "grid": [
+                { "x": 0, "y": 0, "letter": "ق", "words": [0] },
+                { "x": 1, "y": 0, "letter": "ل", "words": [0, 2] },
                 { "x": 2, "y": 0, "letter": "ب", "words": [0] },
-                { "x": 3, "y": 0, "letter": "ن", "words": [0] },
-                { "x": 4, "y": 0, "letter": "ا", "words": [0, 8] },
-                { "x": 0, "y": 3, "letter": "ا", "words": [1, 11] },
-                { "x": 1, "y": 3, "letter": "ب", "words": [1] },
-                { "x": 2, "y": 3, "letter": "ن", "words": [1, 12] },
-                { "x": 2, "y": 6, "letter": "ت", "words": [2, 12] },
-                { "x": 3, "y": 6, "letter": "ب", "words": [2] },
-                { "x": 4, "y": 6, "letter": "ا", "words": [2] },
-                { "x": 5, "y": 6, "letter": "ع", "words": [2, 10] },
-                { "x": 0, "y": 5, "letter": "ع", "words": [3] },
-                { "x": 1, "y": 5, "letter": "ن", "words": [3] },
-                { "x": 2, "y": 5, "letter": "ا", "words": [3, 12] },
-                { "x": 5, "y": 5, "letter": "ب", "words": [4, 10] },
-                { "x": 6, "y": 5, "letter": "ن", "words": [4] },
-                { "x": 7, "y": 5, "letter": "ت", "words": [4, 9] },
-                { "x": 4, "y": 1, "letter": "ت", "words": [5, 8] },
-                { "x": 5, "y": 1, "letter": "ع", "words": [5] },
-                { "x": 6, "y": 1, "letter": "ب", "words": [5, 7] },
-                { "x": 7, "y": 1, "letter": "ا", "words": [5] },
-                { "x": 8, "y": 1, "letter": "ن", "words": [5] },
-                { "x": 4, "y": 3, "letter": "ع", "words": [6, 8] },
-                { "x": 5, "y": 3, "letter": "ت", "words": [6, 10] },
-                { "x": 6, "y": 3, "letter": "ا", "words": [6, 7] },
-                { "x": 7, "y": 3, "letter": "ب", "words": [6, 9] },
-                { "x": 6, "y": 0, "letter": "ت", "words": [7] },
-                { "x": 6, "y": 2, "letter": "ع", "words": [7] },
-                { "x": 4, "y": 2, "letter": "ب", "words": [8] },
-                { "x": 7, "y": 4, "letter": "ا", "words": [9] },
-                { "x": 5, "y": 4, "letter": "ا", "words": [10] },
-                { "x": 0, "y": 1, "letter": "ن", "words": [11] },
-                { "x": 0, "y": 2, "letter": "ب", "words": [11] },
-                { "x": 2, "y": 4, "letter": "ب", "words": [12] }
+                { "x": 0, "y": 2, "letter": "ق", "words": [1] },
+                { "x": 1, "y": 2, "letter": "ب", "words": [1, 2] },
+                { "x": 2, "y": 2, "letter": "ل", "words": [1] },
+                { "x": 1, "y": 1, "letter": "ق", "words": [2] }
+            ]
+        },
+        {
+            "id": "ar-easy-2",
+            "baseLetters": "بجل",
+            "words": [
+                "جبل",
+                "جلب",
+                "بجل"
+            ],
+            "solution": "بجل",
+            "grid": [
+                { "x": 0, "y": 0, "letter": "ج", "words": [0] },
+                { "x": 1, "y": 0, "letter": "ب", "words": [0, 2] },
+                { "x": 2, "y": 0, "letter": "ل", "words": [0] },
+                { "x": 0, "y": 2, "letter": "ج", "words": [1] },
+                { "x": 1, "y": 2, "letter": "ل", "words": [1, 2] },
+                { "x": 2, "y": 2, "letter": "ب", "words": [1] },
+                { "x": 1, "y": 1, "letter": "ج", "words": [2] }
+            ]
+        },
+        {
+            "id": "ar-easy-3",
+            "baseLetters": "علم",
+            "words": [
+                "علم",
+                "عمل",
+                "لمع"
+            ],
+            "solution": "بقل",
+            "grid": [
+                { "x": 0, "y": 0, "letter": "ع", "words": [0] },
+                { "x": 1, "y": 0, "letter": "ل", "words": [0, 2] },
+                { "x": 2, "y": 0, "letter": "م", "words": [0] },
+                { "x": 1, "y": 2, "letter": "ع", "words": [1, 2] },
+                { "x": 2, "y": 2, "letter": "م", "words": [1] },
+                { "x": 3, "y": 2, "letter": "ل", "words": [1] },
+                { "x": 1, "y": 1, "letter": "م", "words": [2] }
             ]
         }
     ]
