--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gh-pages": "^6.3.0",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.536.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^16.2.3",
     "react-router-dom": "^7.8.0",
     "sonner": "^2.0.7",
     "styled-components": "^6.1.19",
