--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gh-pages": "^6.3.0",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.536.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
